--- a/README.adoc
+++ b/README.adoc
@@ -98,4 +98,7 @@ java -jar /opt/sample-app/http-network-diagnostic-1.0.3.jar
 
 En este ejemplo el fichero de configuración de apache es:
 
+[source]
+----
 include::ssl/resources/config/sample-ssl.conf[]
+----
