--- a/README.adoc
+++ b/README.adoc
@@ -1,11 +1,11 @@
 = Ejempos de proxy inverso en contenedores docker
 
-Este proyecto contiene un par de ejemplos de uso de proxy inverso utilizando apache2 en
-contenedores docker.
+Este proyecto contiene varios ejemplos utilizando docker del uso de Apache2 como proxy inverso de
+nuestras aplicaciones.
 
 El primer ejemplo consistirá en exponer por el puerto 80 una aplicacion que escucha por HTTP
 en el puerto 8080. En el segundo expondremos una aplicacion que internamente utiza HTTPS para
-exponerla por el puerto 443.
+exponerla por el puerto 443. En el tercero utilizaremos el módulo de caché de contenidos.
 
 == Ejemplo usando HTTP
 
@@ -108,24 +108,24 @@ En este ejemplo el fichero de configuración de apache es:
 
 ----
 <VirtualHost *:443>
-    ServerName localhost
+  ServerName localhost
 
-    SSLEngine On
-    SSLProxyEngine On
-    SSLProxyCheckPeerCN Off
-    SSLCertificateFile	/root/certificate.pem
-    SSLCertificateKeyFile /root/key.pem
+  SSLEngine On
+  SSLProxyEngine On
+  SSLProxyCheckPeerCN Off
+  SSLCertificateFile	/root/certificate.pem
+  SSLCertificateKeyFile /root/key.pem
 
-    ProxyRequests Off
-    ProxyPreserveHost On
-    ProxyPass / https://0.0.0.0:9009/
-    ProxyPassReverse / https://0.0.0.0:9009/
+  ProxyRequests Off
+  ProxyPreserveHost On
+  ProxyPass / https://0.0.0.0:9009/
+  ProxyPassReverse / https://0.0.0.0:9009/
 
-    <Location />
-        ProxyPassReverse /
-        Options FollowSymLinks
-        Require all granted
-    </Location>
+  <Location />
+    ProxyPassReverse /
+    Options FollowSymLinks
+    Require all granted
+  </Location>
 
 </VirtualHost>
 ----
@@ -146,15 +146,32 @@ Después modificaremos nuestro fichero de configuración de apache para incluir 
 configuración:
 
 ----
-CacheQuickHandler off
-CacheLock on
-CacheRoot /tmp/cache/mod_cache
-CacheLockPath /tmp/cache/mod_cache_lock
-CacheIgnoreCacheControl on
-CacheMaxFileSize 100000000
-CacheIgnoreNoLastMod On
-CacheMaxExpire 1209600
-CacheIgnoreQueryString On
+  # Cache
+  CacheQuickHandler off
+  CacheLock On
+  CacheRoot /tmp/cache/mod_cache
+  CacheLockPath /tmp/cache/mod_cache_lock
+  CacheIgnoreCacheControl On
+  CacheMaxFileSize 100000000
+  CacheIgnoreNoLastMod On
+  CacheMaxExpire 1209600
+  CacheIgnoreQueryString Off
+
+  Header unset Set-Cookie
+  Header unset Etag
+  Header unset Pragma
+  RequestHeader unset Cookie
+  Header merge Cache-Control public
+  Header merge Cache-Control "max-age=bidon"
+  Header edit Cache-Control "^(.*)max-age=(.*)max-age=bidon, (.*)$" $1max-age=$2$3
+  Header edit Cache-Control "^(.*)max-age=(.*), max-age=bidon$" $1max-age=$2
+  Header edit Cache-Control "max-age=bidon" "max-age=600"
+  Header edit Cache-Control "max-age=0" "max-age=600"
+  Header edit Cache-Control "no-cache, " ""
+  Header edit Cache-Control "no-store, " ""
+  Header edit Cache-Control "post-check=0, " ""
+  Header edit Cache-Control "pre-check=0, " ""
+  Header edit Cache-Control "must-revalidate, " ""
 ----
 
 Y activaremos este módulo para nuestro proxy inverso con la aplicación de Ruby que ejecutamos
@@ -199,24 +216,20 @@ Y como hemos establecido el log a nivel de debug comprobaremos que al servir las
 a la caché en lugar de realizar la llamada a nuestra aplicación:
 
 ----
-[authz_core:debug] [pid 770:tid 140452264015616] mod_authz_core.c(835): [client 172.17.0.1:55388] AH01628: authorization result: granted (no directives)
-[cache:debug] [pid 770:tid 140452264015616] cache_storage.c(664): [client 172.17.0.1:55388] AH00698: cache: Key for entity /hello.html?(null) is http://localhost:80/hello.html?
-[cache_disk:debug] [pid 770:tid 140452264015616] mod_cache_disk.c(572): [client 172.17.0.1:55388] AH00709: Recalled cached URL info header http://localhost:80/hello.html?
-[cache_disk:debug] [pid 770:tid 140452264015616] mod_cache_disk.c(885): [client 172.17.0.1:55388] AH00720: Recalled headers for URL http://localhost:80/hello.html?
-[cache:debug] [pid 770:tid 140452264015616] mod_cache.c(502): [client 172.17.0.1:55388] AH00757: Adding CACHE_SAVE filter for /hello.html
-[cache:debug] [pid 770:tid 140452264015616] mod_cache.c(536): [client 172.17.0.1:55388] AH00759: Adding CACHE_REMOVE_URL filter for /hello.html
-[proxy:debug] [pid 770:tid 140452264015616] mod_proxy.c(1155): [client 172.17.0.1:55388] AH01143: Running scheme http handler (attempt 0)
-[proxy_ajp:debug] [pid 770:tid 140452264015616] mod_proxy_ajp.c(713): [client 172.17.0.1:55388] AH00894: declining URL http://0.0.0.0:8080/hello.html
-[proxy:debug] [pid 770:tid 140452264015616] proxy_util.c(2131): AH00942: HTTP: has acquired connection for (0.0.0.0)
-[proxy:debug] [pid 770:tid 140452264015616] proxy_util.c(2184): [client 172.17.0.1:55388] AH00944: connecting http://0.0.0.0:8080/hello.html to 0.0.0.0:8080
-[proxy:debug] [pid 770:tid 140452264015616] proxy_util.c(2385): [client 172.17.0.1:55388] AH00947: connected /hello.html to 0.0.0.0:8080
-[proxy:debug] [pid 770:tid 140452264015616] proxy_util.c(2621): AH00951: HTTP: backend socket is disconnected.
-[proxy:debug] [pid 770:tid 140452264015616] proxy_util.c(2873): AH00962: HTTP: connection complete to 0.0.0.0:8080 (0.0.0.0)
-[proxy:debug] [pid 770:tid 140452264015616] proxy_util.c(2146): AH00943: http: has released connection for (0.0.0.0)
-[cache:debug] [pid 770:tid 140452264015616] mod_cache.c(1332): [client 172.17.0.1:55388] AH00769: cache: Caching url: /hello.html
-[cache:debug] [pid 770:tid 140452264015616] mod_cache.c(1338): [client 172.17.0.1:55388] AH00770: cache: Removing CACHE_REMOVE_URL filter.
-[cache_disk:debug] [pid 770:tid 140452264015616] mod_cache_disk.c(1350): [client 172.17.0.1:55388] AH00737: commit_entity: Headers and body for URL http://localhost:80/hello.html? cached.
+[Thu May 03 09:10:37.008909 2018] [authz_core:debug] [pid 1263:tid 139943938004736] mod_authz_core.c(835): [client 172.17.0.1:55728] AH01628: authorization result: granted (no directives)
+[Thu May 03 09:10:37.009031 2018] [cache:debug] [pid 1263:tid 139943938004736] cache_storage.c(664): [client 172.17.0.1:55728] AH00698: cache: Key for entity /hello.html?(null) is http://localhost:80/hello.html?
+[Thu May 03 09:10:37.009169 2018] [cache_disk:debug] [pid 1263:tid 139943938004736] mod_cache_disk.c(572): [client 172.17.0.1:55728] AH00709: Recalled cached URL info header http://localhost:80/hello.html?
+[Thu May 03 09:10:37.009209 2018] [cache_disk:debug] [pid 1263:tid 139943938004736] mod_cache_disk.c(885): [client 172.17.0.1:55728] AH00720: Recalled headers for URL http://localhost:80/hello.html?
+[Thu May 03 09:10:37.009259 2018] [cache:debug] [pid 1263:tid 139943938004736] mod_cache.c(652): [client 172.17.0.1:55728] AH00763: cache: running CACHE_OUT filter
+[Thu May 03 09:10:37.009271 2018] [cache:debug] [pid 1263:tid 139943938004736] mod_cache.c(681): [client 172.17.0.1:55728] AH00764: cache: serving /hello.html
+[Thu May 03 09:11:15.671044 2018] [authz_core:debug] [pid 1263:tid 139943808571136] mod_authz_core.c(835): [client 172.17.0.1:55734] AH01628: authorization result: granted (no directives)
+[Thu May 03 09:11:15.671152 2018] [cache:debug] [pid 1263:tid 139943808571136] cache_storage.c(664): [client 172.17.0.1:55734] AH00698: cache: Key for entity /hello.html?(null) is http://localhost:80/hello.html?
+[Thu May 03 09:11:15.671229 2018] [cache_disk:debug] [pid 1263:tid 139943808571136] mod_cache_disk.c(572): [client 172.17.0.1:55734] AH00709: Recalled cached URL info header http://localhost:80/hello.html?
+[Thu May 03 09:11:15.671244 2018] [cache_disk:debug] [pid 1263:tid 139943808571136] mod_cache_disk.c(885): [client 172.17.0.1:55734] AH00720: Recalled headers for URL http://localhost:80/hello.html?
+[Thu May 03 09:11:15.671264 2018] [cache:debug] [pid 1263:tid 139943808571136] mod_cache.c(652): [client 172.17.0.1:55734] AH00763: cache: running CACHE_OUT filter
+[Thu May 03 09:11:15.671272 2018] [cache:debug] [pid 1263:tid 139943808571136] mod_cache.c(681): [client 172.17.0.1:55734] AH00764: cache: serving /hello.html
 ----
+
 
 Para saber más consultar la documentación oficial:
 
