--- a/README.adoc
+++ b/README.adoc
@@ -284,15 +284,15 @@ curl --insecure https://localhost/api/date
 Obteniendo los siguientes resultados:
 
 ----
-$ curl --insecure https://localhost/api/date ; echo
+$ curl --insecure https://localhost/api/date
 "2018-05-03T13:04:15.947+0000"
-$ curl --insecure https://localhost/api/date ; echo
+$ curl --insecure https://localhost/api/date
 "2018-05-03T13:04:16.857+0000"
-$ curl --insecure https://localhost/api/date ; echo
+$ curl --insecure https://localhost/api/date
 "2018-05-03T13:04:17.440+0000"
-$ curl --insecure https://localhost/api/date ; echo
+$ curl --insecure https://localhost/api/date
 "2018-05-03T13:04:18.163+0000"
-$ curl --insecure https://localhost/api/date ; echo
+$ curl --insecure https://localhost/api/date
 "2018-05-03T13:04:19.424+0000"
 ----
 
